# rust-assignment

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
