[package]
name = "key-ownership-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
base64 = "0.21.0"
base64-url = "2.0"
ring = "0.16.20"
rustls = "0.21.0"
jwt = "0.16.0"
jsonwebtoken = "8.0"
jwt-simple = "0.11.5"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
thiserror = "1.0.40"
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.1"
time = "0.3.20"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[[bin]]
name = "holder"
path = "src/bin/holder.rs"

[[bin]]
name = "verifier"
path = "src/main.rs"